--- a/JSGame/style.css
+++ b/JSGame/style.css
@@ -1,17 +1,23 @@
 body {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
   padding: 0;
+  margin: 0;
   height: 100vh;
   width: 100vw;
+  background-color: black;
+
 }
 
 #game {
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column-reverse;
-  align-items: center;
 }
+
 #gameArea {
   background-color: wheat;
   height: 900px;
