--- a/JSGame/playerUI.css
+++ b/JSGame/playerUI.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+
 .playerUI {
     width: 300px;
     height: 900px;
@@ -7,6 +9,7 @@
     align-items: center;
 }
 
+
 .player1Lives {
     color: white;
     font-size: 40px;
@@ -15,11 +18,20 @@
 }
 
 .heartContainer {
-    width: 50%;
-    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 75px;
 }
 
 #heartImage {
     height: 50px;
     width: 50px;
+}
+
+.livesContainer {
+    display: flex;
+    width: 75%;
+    height: 75px;
 }
