--- a/JSGame/playerUI.css
+++ b/JSGame/playerUI.css
@@ -49,7 +49,41 @@
 }
 
 #AK47 {
-    width: 300px;
+    width: 100%;
     height: 200px;
-    margin-left: 35px;
+    padding-left: 50px;
+/*     margin-left: 35px;
+ */}
+
+.ammoContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Pixelify Sans';
+    font-size: 40px;
+    color: white;
+    width: 100%;
+    height: 200px;
+}
+
+.bulletContainer {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 90px;
+}
+
+#bulletImg {
+    height: 30px;
+    width: 30px;
+}
+
+#reloadText {
+    z-index: 5;
+    font-size: 40px;
+    color: green;
+    position: absolute;
+    top: 250px;
+    left: 250px;
 }
