--- a/JSGame/style.css
+++ b/JSGame/style.css
@@ -23,6 +23,8 @@ body {
   height: 900px;
   width: 900px;
   border: 4px black solid;
+  position: relative;
+  z-index: 0;
 }
 
 #gameArea:hover {
