--- a/JSGame/Player UI/playerUIPlayer1.css
+++ b/JSGame/Player UI/playerUIPlayer1.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 
-.playerUI {
+.playerUIPlayer1{
     width: 300px;
     height: 900px;
     border: 2px solid white;
@@ -48,13 +48,6 @@
     height: 150px;
 }
 
-#AK47 {
-    width: 100%;
-    height: 200px;
-    padding-left: 50px;
-/*     margin-left: 35px;
- */}
-
 .ammoContainer {
     display: flex;
     flex-direction: column;
@@ -79,3 +72,15 @@
     width: 30px;
 }
 
+#AK47 {
+    width: 100%;
+    height: 200px;
+    padding-left: 50px;
+/*     margin-left: 35px;
+ */}
+
+ #glock44 {
+    width: 100%;
+    height: 200px;
+/*     margin-left: 35px;
+ */}
